Decision Trees for Cancer Detection.

--- a/12_ML_Projects/03_NumberClassification_KNN.ipynb
+++ b/12_ML_Projects/03_NumberClassification_KNN.ipynb
@@ -15,7 +15,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Day 3, Problem: Recognize handwritten digits with k-Nearest Neighbors on MNIST\n",
     "# This is a classification problem.\n",
     "\n",
     "from sklearn.datasets import fetch_openml\n",
@@ -1119,13 +1118,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54291e1a-af62-488d-a075-27f78fff1a35",
+   "cell_type": "markdown",
+   "id": "7df58f8d-ba9b-4835-9e3e-40e764d56d94",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Step 7: CheFor different K values"
+    "### Step 7: Check accuracy for different K values"
    ]
   },
   {
@@ -1198,8 +1195,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "153f8e34-84b7-40f0-8a6c-cbbe36425dfd",
+   "metadata": {},
+   "source": [
+    "### Step 7: Visualization."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "id": "a3ac2544-725b-47a2-ad25-eaa84ee4a48a",
    "metadata": {},
    "outputs": [
@@ -1215,8 +1220,7 @@
     }
    ],
    "source": [
-    "# Step 7: Visualization.\n",
-    "plt.figure(figsize=(10,7)) # I will go with Day 2 plot size.\n",
+    "plt.figure(figsize=(10,7)) \n",
     "sns.heatmap(confusion_matrix, annot=True, fmt='g', cmap='Greens', xticklabels=mnist_data.target_names, yticklabels=mnist_data.target_names)\n",
     "plt.xlabel('Predicted Values')\n",
     "plt.ylabel('Actual Values')\n",
@@ -1238,14 +1242,6 @@
     "- Let's see at K=2, Accuracy:  0.9642142857142857\n",
     "- so K=3 is best for our problem."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a3fa15e2-e309-40e2-9862-84d8427b667c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
